@@ -209,6 +209,7 @@ error.directorydelete=Error while deleting file from {0}\: {1}
 error.directoryinvalid={0} is not a valid directory.
 error.directoryread=Error while reading file from {0}\: {1}
 error.directorywrite=Error while writing file to {0}\: {1}
+error.fieldlength=The value "{0}" exceeds the maximum allowed field size of {1} characters.
 error.heading=A system error has occurred.  The error message is\:
 error.login=The username and/or password is incorrect.  Please try again.
 error.loginempty=Login cannot be empty.
